@@ -1150,6 +1150,10 @@ and gen_expr_2 ctx retval e =
 		gen_binop ctx retval op e1 e2
 	| TUnop (op,flag,e) ->
 		gen_unop ctx retval op flag e
+	| TCast (e,None) ->
+		gen_expr ctx retval e
+	| TCast (e1,Some t) ->
+		gen_expr ctx retval (Codegen.default_cast ctx.com e1 t e.etype e.epos)
 	| TMatch (e,_,cases,def) ->
 		gen_match ctx retval e cases def
 	| TFor (v,_,it,e) ->
